# optenzml

./: README.md  TUTORIAL.md  pyproject.toml
data/raw/: topt_data_final.tsv
examples/: prokaryotic_enzymes.fasta  sample_enzymes.fasta
optenzml/: __init__.py  __main__.py
optenzml/cli/: __init__.py  cli.py
optenzml/consensus/: __init__.py  consensus_model.py
optenzml/predictors/: __init__.py  base_predictor.py  brenda_predictors.py  custom_predictor.py  seq2topt_predictor.py  tomer_predictor.py
optenzml/utils/: __init__.py  data_loader.py  output_formatter.py
results/: realistic_prokaryotic_predictions.csv  sample_enzyme_predictions.csv
scripts/: demo_brenda_pipeline.py  demo_brenda_pipeline_basic.py  demo_brenda_pipeline_simple.py  demo_pipeline.py  download_brenda_data.py  download_brenda_data_simple.py  optenzml_predict.py  predict_sample_enzymes.py  run_all_models_consensus.py  train_brenda_models.py  train_custom_models.py
